syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/matheuspolitano/GadgetHub/pkg/pb";

message User {
    int64 user_id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string phone = 5;
    string user_role = 6;
    google.protobuf.Timestamp created_at = 7;
    
}